[package]
name = "pop_the_lock"
version = "0.1.0"
edition = "2024"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[profile.release]
opt-level = "z"
lto = true
strip = true

[dependencies]
my_macros = { path = "./my_macros" }
bevy = { version = "0.18.1", features = ["mp3"] }
bevy-inspector-egui = "0.36.0"
rand = "0.10.1"
bevy_pkv = "0.15.0"

[build-dependencies]
winres = "0.1"